[package]
name = "upload-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-multipart = "0.4"
futures-util = { version = "0.3.7", default-features = false, features = ["std"] }
sanitize-filename = "0.3"
uuid = { version = "0.8", features = ["v4"] }
actix-easy-multipart = "2.1.1"
